<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity">

    <LinearLayout
        android:id="@+id/textFields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteY="376dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/textField1"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/textFieldOnePlaceholder"
            tools:ignore="Autofill,LabelFor" />

        <EditText
            android:id="@+id/textField2"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:minHeight="48dp"
            android:hint="@string/textFieldTwoPlaceholder"
            tools:ignore="Autofill,LabelFor" />

        <Button
            android:id="@+id/cmpBtn"
            android:layout_width="207dp"
            android:layout_height="wrap_content"
            android:text="@string/btnText" />
    </LinearLayout>

    <TextView
        android:id="@+id/resultOutput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:label="@string/resultLabel"
        android:text="@string/resultText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textFields" />
</androidx.constraintlayout.widget.ConstraintLayout>
